# symex

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.devcontainer/: devcontainer-llvm-14.json  devcontainer.json
cargo-symex/: Cargo.toml
cargo-symex/src/: args.rs  build.rs  main.rs
cli/: Cargo.toml
cli/src/: args.rs  build.rs  build_c.rs  main.rs  runner.rs
crates/interpret/: Cargo.toml
crates/interpret/src/: bv.rs  lib.rs  project.rs
crates/interpret/tests/: tests.rs
crates/llvm-ir/: Cargo.toml
crates/llvm-ir/src/: constant.rs  global.rs  instruction.rs  lib.rs  module.rs  types.rs  (+2 more)
crates/symex_lib/: Cargo.toml  build.rs
crates/valid_derive/: Cargo.toml
examples/: Cargo.toml  c_for.rs  c_multiple_modules.rs  c_simple.rs  c_simplest.rs  callstack.rs  generics.rs  outputs.rs  rust_simple_code.rs  rust_simple_runner.rs  simple.rs  simplest.rs  simplest2.rs  structs.rs  structured.rs  structured_size.rs
examples/examples/: allocations.rs  bubble_sort.rs  callstack.rs  enum.rs  generics.rs  get_sign.rs  initial.rs  output.rs  outputs.rs  simple.rs  sort.rs  struct.rs  structs.rs  structured.rs  structured_size.rs  traits.rs
examples/samples/for/: main.c
examples/samples/simple/: main.c
examples/samples/simplest/: main.c
examples/src/: lib.rs
examples_c/: sort.c
runner/: Cargo.toml
runner/src/: display_impls.rs  lib.rs  run.rs
samples/multiple/: main.bc  main.c  main.ll  other.bc  other.c  other.ll
samples/simple/: main.bc  main.ll
samples/simplest/: main.c
scripts/: c.sh  cargo_rs.sh  compile_examples.sh  compile_samples.sh  compile_tests.sh  compile_tests_dc.sh  rs.sh
src/: lib.rs  modpriv.rs  run.rs  util.rs
src/_check/: check.rs
src/common/: mod.rs  ops.rs  size.rs  solution_var.rs  to_symbol.rs  to_value.rs  util.rs
src/core/: executor.rs  memory.rs  mod.rs  path_exploration.rs  path_selection.rs  smt.rs
src/custom_modules/: mod.rs  rust.rs
src/executor/: cfg.rs  mod.rs  project.rs  stats.rs  vm.rs
src/hooks/: intrinsics.rs  mod.rs
src/llvm/: mod.rs  path_selection.rs  project.rs  util.rs  vm.rs
src/memory/: array_memory.rs  bump_allocator.rs  linear_allocator.rs  mod.rs  object_memory.rs  simple_memory.rs
src/path_exploration/: dfs.rs  mod.rs
src/project/: map.rs  mod.rs  module.rs
src/smt/: mod.rs
src/solver/: array.rs  bv.rs  mod.rs  solver.rs
src/traits/: mod.rs  op.rs  ops.rs  size.rs  tobv.rs  toop.rs  value.rs
src/util/: mod.rs
src/utility/: mod.rs
src/vm/: error.rs  globals.rs  instructions.rs  location.rs  mod.rs  ops.rs  state.rs  varmap.rs  vm.rs
symex/: Cargo.toml  compile_tests_dc.sh
symex-llvm-14-legacy/: Cargo.toml  compile_tests_dc.sh
symex-llvm-14-legacy/src/llvm/: error.rs  vm.rs
symex-llvm-14-legacy/src/llvm/common/: mod.rs  to_expr.rs
symex-llvm-14-legacy/src/llvm/state/: location.rs
symex-llvm-14-legacy/src/memory/: array_memory.rs
symex-llvm-14-legacy/tests/samples/: array_index.rs  loop.rs
symex-llvm-14-legacy/tests/unit_tests/: instructions.ll
symex-llvm-ir/: compile_tests.sh
symex-llvm-ir/tests/: main.rs
symex/src/: lib.rs  run.rs  util.rs
symex/src/memory/: linear_allocator.rs  mod.rs  object_memory.rs
symex/src/runner/: mod.rs
symex/src/smt/: mod.rs
symex/src/smt/smt_boolector/: expr.rs  mod.rs  solver.rs
symex/src/vm/: executor.rs  hooks.rs  intrinsic.rs  mod.rs  path_selection.rs  project.rs  state.rs  vm.rs
symex/tests/: main.rs  test_runner.rs
symex/tests/samples/: call.c  ifs.c  multiple_paths.c  structs.rs
symex/tests/unit_tests/: instructions.ll
tests/: main.rs  test_runner.rs  tests.rs
tests/bc2/: locals.bc  locals.ll
tests/bcs/: asdf.bc  asdf.ll  asdf.rs  call.c  catch_panic.bc  ifs.bc  match.bc  match.ll  match.rs  multiple_paths.bc  multiple_paths.c  oob-unchecked.bc  oob-unchecked.rs  oob.bc  oob.ll  oob.rs  rust_simple.rs  simple.c  throw.bc  throw.cpp  throw.ll  traits.bc  traits.ll  traits.rs  vec.bc  vec.ll  vec.rs
tests/doc_tests/: test.rs
tests/samples/: array_index.rs  call.c  fn_refs.rs  globals.bc  globals.ll  globals.rs  loop.rs  match.rs  multiple_paths.c  out_of_bounds.bc  out_of_bounds.ll  out_of_bounds.rs  simple.c  structs.rs  traits.rs
tests/unit_tests/: intrinsics.ll  test.ll
valid_derive/: Cargo.toml
valid_derive/examples/: valid.rs  valid_derive.rs
valid_derive/src/: lib.rs
x0001e_lib/: Cargo.toml  build.rs
x0001e_lib/examples/: allocations.rs  bubble_sort.rs  callstack.rs  enum.rs  generics.rs  initial.rs  outputs.rs  simple.rs  sort.rs  struct.rs  structs.rs  structured.rs  structured_size.rs
x0001e_lib/src/: lib.rs  shims.c
(+80 files in other folders)
