[package]
name = "x0001e"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
thiserror = "1.0.30"
either = "1.6"
llvm-ir = { version = "0.8.1", features = ["llvm-13"] }
log = "0.4.0"
env_logger = "0.9.0"
rustc-demangle = "0.1.21"
boolector = "0.4.3"
#z3 = {version="0.11.2", features = ["static-link-z3"]}
radix_trie = "0.2.1"

[workspace]
members = ["cli"]
