[package]
name = "x0001e"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
thiserror = "1.0.37"
either = "1.8.0"
llvm-ir = { version = "0.8.2", features = ["llvm-14"] }
env_logger = "0.9.1"
rustc-demangle = "0.1.21"
boolector = { version = "0.4.3", features = ["vendor-lgl"] }
z3 = { version = "0.11.2", features = ["static-link-z3"] }
radix_trie = "0.2.1"
rand = "0.8.5"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[workspace]
members = ["cli", "valid_derive", "x0001e_lib"]

[profile.release]
debug = true
