[package]
name = "cli"
version = "1.0.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "cargo-symex"

[dependencies]
anyhow = "1.0.65"
cargo-project = "0.3.0"
clap = { version = "=4.0.10", features = ["derive"] }
log = "0.4.17"
regex = "1.6.0"
rustc_version = "0.4.0"
rustc-demangle = "0.1.21"
symex = { path = "../", version = "1.0" }
colored = "2.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
