[package]
name = "cli"
version = "1.0.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "cargo-x0001e"

[dependencies]
anyhow = "1.0.57"
cargo-project = "0.2.7"
clap = { version = "3.1.10", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.16"
regex = "1.5.5"
rustc_version = "0.4.0"
x0001e = { path = "../", version = "1.0" }
