[package]
name = "runner"
version = "1.0.0"
edition = "2021"


[dependencies]
anyhow = "1.0.57"
indenter = "0.3.3"
colored = "2.0.0"
rustc-demangle = "0.1.21"
x0001e = { path = "../", version = "1.0" }
llvm-ir = { version = "0.8.1", features = ["llvm-13"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
