[package]
name = "symex"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
thiserror = "1.0.37"
either = "1.8.0"
llvm-ir = { version = "0.8.2", features = ["llvm-14"] }
env_logger = "0.9.1"
rustc-demangle = "0.1.21"
boolector = { version = "0.4.3", features = ["vendor-lgl"], optional = true }
z3 = { version = "0.11.2", features = ["static-link-z3"], optional = true }
radix_trie = "0.2.1"
rand = "0.8.5"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
object = "0.29.0"
num_enum = "0.5.7"
indenter = "0.3"
colored = "2.0.0"

[features]
default = ["boolector"]
boolector = ["dep:boolector"]
z3 = ["dep:z3"]

